# fastapi-wrapped-mt5

./: .gitignore  GEMINI.md  README.md  environment.yml  pyproject.toml  start.ps1  start.sh
src/: main.py  models.py  utils.py
src/routers/: connection.py  history.py  info.py  market_data.py  orders.py  positions.py  symbols.py
