[project]
name = "fastapi-wrapped-mt5"
version = "0.1.0"
description = "A FastAPI wrapper for MetaTrader 5 (MT5) to enable seamless integration and interaction with MT5 functionalities through a RESTful API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
    "metatrader5",
]
